--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   margin-right: auto;
   /* background-image: url("https://st2.depositphotos.com/3213441/12022/v/950/depositphotos_120226298-stock-illustration-pokemon-go-pokeball-seamless-texture.jpg"); */
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Pok%C3%A9_Ball_icon.svg/1200px-Pok%C3%A9_Ball_icon.svg.png");
-  background-size: 12rem;
+  background-size: 300px;
 }
 
 .App-logo {
